# dndbook

./: .env.example  .gitignore  CONTRIBUTING.md  DEVLOG.md  LICENSE  README.md  ROADMAP.md  USER_MANUAL.md  cleanup-postgres.sh  docker-compose.standalone.yaml  docker-compose.yaml.template  docker-compose.yml  nginx.conf.template  package-lock.json  rebuild.sh  setup-postgres.sh  setup.sh  start-docker.sh  start-standalone.sh  stop-docker.sh  stop-standalone.sh
be/: .dockerignore  .env  .env.example  Dockerfile  app.py  cleanup-docker.sh  cleanup-standalone.sh  cleanup.sh  docker-entrypoint.sh  init-and-start.sh  init-db.sh  init-db.sql  main.py  migrate_init.sh  pyproject.toml  requirements.txt  run-docker.sh  run-standalone.sh  run.py  setup-postgres.sh  setup.sh  update-db.sh
be/app/: __init__.py  auth.py  mock_data.py  models.py  socketio_events.py
be/app/constants/: pdf_styles.py
be/app/controllers/: auth_controller.py  campaigns_controller.py  characters_controller.py  export_controller.py  import_controller.py  invites_controller.py  mock_data_controller.py  notifications_controller.py  pdf_export_controller.py  posts_controller.py  posts_viewed_status_controller.py  user_controller.py
be/app/events/: socketio_events.py
be/app/jwt/: jwt_utils.py
be/app/models/: __init__.py  campaign.py  campaign_invite.py  campaign_members.py  character.py  character_mention.py  comment.py  image.py  notification.py  post.py  post_viewed_status.py  user.py
be/docker-entrypoint-initdb.d/: init-db.sql
be/tests/: conftest.py  test_auth.py  test_text_filter.py
(+145 files in other folders)
